--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = "0.12.23"
+reqwest = {  version = "0.12.23" , features = ["blocking"]}
 scraper = "0.24.0"
-tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
