Reorganize code into several crates + Create an api

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
-[package]
-name = "courses-calculator"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = [
+    "core",
+    "api",
+]
 
-[dependencies]
-reqwest = {  version = "0.12.23" , features = ["blocking"]}
-scraper = "0.24.0"
-polars = {  version = "0.51.0", features = ["csv"] }
-zip = "5.1.1"
+resolver = "2"
+
+[workspace.package]
+edition = "2024"
+version = "0.1.0"
