--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ci
+name: Continuous Integration
 on:
   workflow_call:
   push:
@@ -6,8 +6,15 @@ on:
       - main
 
 jobs:
-  build:
+  ci:
+    name: Build and push Docker image
+
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: write
+
     steps:
       - name: Log in to GHCR
         uses: docker/login-action@v3
