--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,11 @@
-name: Continuous Integration
+name: Continuous Integration API
 on:
   workflow_dispatch:
   push:
     branches:
       - main
-      - issue1-exclude-github-dir-from-ci
-    paths-ignore:
-      - '.github/**'
-      - 'infra'
-      - '**.md'
+    paths:
+      - api/**
 
 jobs:
   ci:
@@ -34,5 +31,6 @@ jobs:
 
       - uses: docker/build-push-action@v6
         with:
+          context: api
           push: true
-          tags: ghcr.io/aspedrosa/courses-calculator:latest
+          tags: ghcr.io/aspedrosa/courses-calculator-api:latest
